# api/routers/v1/webapp/webapp.go
@@ -7,6 +7,29 @@ import (
 	"github.com/unknwon/com"
 )
 
+// @Summary product detail
+// @Tags Product
+// @Description 详情
+// @Produce  json
+// @Security token
+// @Param id path int true "ID"
+// @Success 200 {object} msg.Response
+// @Failure 200 {object} msg.Response
+// @Router /api/v1/product/{id}/ [get]
+func Detail(c *gin.Context) {
+	id := com.StrTo(c.Param("id")).MustInt()
+	var data interface {}
+	if db.ExistWebappById(id) {
+		data = db.GetWebapp(id)
+		c.JSON(msg.SuccessResp(data))
+		return
+	} else {
+		c.JSON(msg.ErrResp("record not found"))
+		return
+	}
+}
+
+
 // @Summary product list
 // @Tags Product
 // @Description 列表
@@ -14,18 +37,25 @@ import (
 // @Security token
 // @Param page query int true "Page"
 // @Param pagesize query int true "Pagesize"
+// @Param object query db.WebappSearchField false "field"
 // @Success 200 {object} msg.Response
 // @Failure 200 {object} msg.Response
 // @Router /api/v1/product/ [get]
 func Get(c *gin.Context) {
 	data := make(map[string]interface{})
+	field := db.WebappSearchField{Search: ""}
 	// 分页
 	page, _ := com.StrTo(c.Query("page")).Int()
 	pageSize, _ := com.StrTo(c.Query("pagesize")).Int()
 
-	apps := db.GetWebApps(page, pageSize)
+	// 查询条件
+	if arg := c.Query("search"); arg != "" {
+		field.Search = arg
+	}
+
+	apps := db.GetWebapps(page, pageSize, &field)
 	data["data"] = apps
-	total := db.GetWebAppsTotal()
+	total := db.GetWebappsTotal(&field)
 	data["total"] = total
 	c.JSON(msg.SuccessResp(data))
 	return
@@ -36,7 +66,7 @@ func Get(c *gin.Context) {
 // @Description 新增
 // @Produce  json
 // @Security token
-// @Param plugin body rule.Plugin true "plugin"
+// @Param plugin body db.Webapp true "webapp"
 // @Success 200 {object} msg.Response
 // @Failure 200 {object} msg.Response
 // @Router /api/v1/product/ [post]
@@ -55,4 +85,55 @@ func Add(c *gin.Context) {
 		c.JSON(msg.SuccessResp(app))
 		return
 	}
+}
+
+// @Summary product update
+// @Tags Product
+// @Description 更新
+// @Produce  json
+// @Security token
+// @Param id path int true "ID"
+// @Param webapp body db.Webapp true "webapp"
+// @Success 200 {object} msg.Response
+// @Failure 200 {object} msg.Response
+// @Router /api/v1/product/{id}/ [put]
+func Update(c *gin.Context) {
+	id := com.StrTo(c.Param("id")).MustInt()
+	app := db.Webapp{}
+	err := c.ShouldBindJSON(&app)
+	if err != nil {
+		c.JSON(msg.ErrResp("组件名称不可为空"))
+		return
+	}
+
+	if db.ExistWebappById(id){
+		db.EditWebapp(id, app)
+		c.JSON(msg.SuccessResp(app))
+	} else {
+		c.JSON(msg.ErrResp("record not found"))
+		return
+	}
+}
+
+// @Summary product delete
+// @Tags Product
+// @Description 删除
+// @Produce  json
+// @Security token
+// @Param id path int true "ID"
+// @Success 200 {object} msg.Response
+// @Failure 200 {object} msg.Response
+// @Router /api/v1/product/{id}/ [delete]
+func Delete(c *gin.Context) {
+	id := com.StrTo(c.Param("id")).MustInt()
+
+	if db.ExistWebappById(id) {
+		db.DeleteWebapp(id)
+		c.JSON(msg.SuccessResp("删除成功"))
+		return
+	} else {
+		c.JSON(msg.ErrResp("record not found"))
+		return
+	}
+
 }
